# limax

./: .gitignore  license.txt
cpp/limax/: build.xml
cpp/limax/include/: QRCODE.h  dlldefines.h  endpoint.h  endpointconfig.h  http.h  json.h  limax.h  marshal.h  netbase.h  octets.h  osbase.h  osdefine.h  osincs.h  protocol.h  script.h  threadpool.h  utils.h  variant.h  view.h
cpp/limax/linux.gcc.makefile/: .cproject  .project  Makefile  readme.txt
cpp/limax/macos.clang.makefile/: .cproject  .project  Makefile  makelib.mk
cpp/limax/source/: BI.c  QRCODE.c  QRCODE.h  auanyservice.cpp  auanyservice.h  byteorder.h  codec.cpp  codec.h  common.h  dh.cpp  dh.h  endpoint.cpp  endpointconfig.cpp  endpointhelper.cpp  endpointhelper.h  endpointinc.h  engine.h  erroroccured.h  http.cpp  httpclient.cpp  httpclient.h  json.cpp  marshal.cpp  netinterface.h  netio.cpp  netio.h  netsession.cpp  netsession.h  octets.cpp  osstr.h  protocol.cpp  rfc2118.cpp  rfc2118.h  script.cpp  scriptexchange.h  security.cpp  security.h  threadpool.cpp  utils.cpp  variant.cpp  (+8 more)
cpp/limax/windows.vs2013/: limax.sln  limax.vcxproj  limax.vcxproj.filters
cpp/limax/windows.vs2015/: limax.vcxproj
csharp/limax/: build.xml  codec.cs  endpoint.cs  limax.csproj  net.cs  script.cs  util.cs  variant.cs  vs2013.limax.sln
csharp/limax/xmlsrc/: auanyviews.ServiceResult.cs  providerendpoint.SendControlToServer.cs  providerendpoint.SyncViewToClients.cs  providerendpoint.Tunnel.cs  switcherendpoint.CHandShake.cs  switcherendpoint.OnlineAnnounce.cs  switcherendpoint.PingAndKeepAlive.cs  switcherendpoint.PortForward.cs  switcherendpoint.ProviderLogin.cs  switcherendpoint.SHandShake.cs  switcherendpoint.SessionKick.cs  switcherendpoint.SessionLoginByToken.cs
demo/chatroom/Android.ChatClient/: .cproject  .project  AndroidManifest.xml  build.xml  project.properties
demo/chatroom/androidclientsdk/: settings.gradle
demo/chatroom/chatserver/: .classpath  .project  build.xml  service-chatserver.xml
demo/chatroom/cpp.vs2013/: Resource.h  build.xml  chatroom.cpp  chatroom.rc  chatroom.sln  chatroom.vcxproj  chatroom.vcxproj.filters  stdafx.cpp  stdafx.h
demo/httpserver/: .classpath  .project  ca.p7b  localhost.p12
demo/qrdecode/android.demo.as/app/: CMakeLists.txt  build.gradle
demo/qrdecode/android.demo.as/app/src/androidTest/java/limax/android/demo/: ExampleInstrumentedTest.kt
demo/qrdecode/android.demo.as/app/src/main/: AndroidManifest.xml
demo/qrdecode/android.demo.as/app/src/main/cpp/: native-lib.cpp
demo/qrdecode/android.demo.as/app/src/main/java/limax/android/demo/: MainActivity.kt  QRInfo.java
demo/qrdecode/android.demo.as/app/src/main/res/layout/: activity_main.xml
demo/qrdecode/android.demo.as/app/src/main/res/values/: strings.xml
demo/qrdecode/android.demo.as/app/src/test/java/limax/android/demo/: ExampleUnitTest.kt
demo/testmonitor/: .classpath  .project  build.xml  testmonitor.xml
java/: build.xml
java/android/: .classpath  .project  AndroidManifest.xml  build.gradle  build.xml
java/auany/: .project  accountloggermysql.xml  appconfig.xml  build.xml  firewall.xml  payloggerfile.xml  payloggermysql.xml  service-auany.xml
java/autiny/: .classpath  .project  build.xml
java/globalid/: .classpath  .project  build.xml  service-globalid.xml
java/limax/: .classpath  .gitignore  .project  auany.views.xml  auany.xml  build.xml  caserver.xml  defines.beans.xml  endpoint.xml  globalid.xml  keyserver.xml  limax.xml  lmkserver.xml  ocspserver.xml  provider.endpoint.xml  provider.globalid.xml  service-switcher.xml  switcher.auany.xml  switcher.endpoint.xml  switcher.provider.xml
java/sqlchart/: build.gradle  note.txt  test.json
javascript/: auany.js  limax.js  map.js  qrcode.html  qrcode.js
javascript/SpiderMonkey/: build.xml
lua/lualib/: build.xml
lua/lualib/clr/: luacs.cs  (+1 more)
(+1126 files in other folders)
